# OpenOutreach

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Decisions.md  GEMINI.md  LEGAL_NOTICE.md  Makefile  PRIVACY_NOTICE.md  Plan of Execution.md  Progress.md  README.md  Tasks.md  local.yml  main.py  manage.py  manage_crm.py  pyproject.toml  pytest.ini  test_follow_up.py
analytics/: .user.yml  dbt_project.yml  profiles.yml
assets/: accounts.secrets.template.yaml  campaign_keywords.yaml
crm/: middleware.py  setup_urls.py  setup_views.py  urls.py  views.py
docs/: GDPR_ROADMAP.md  architecture.md  configuration.md  default_campaign.md  docker.md  follow_up_agent.md  mcp.md  partner-simplification-roadmap.md  profile_lifecycle.md  remove_profile_dict.md  template-variables.md  templating.md  testing.md
linkedin/: admin.py  conf.py  csv_launcher.py  daemon.py  daemon_manager.py  diagnostics.py  django_settings.py  exceptions.py  gdpr.py  llm.py  logging.py  models.py  onboarding.py  rate_limiter.py  renderer.py  seeds.py  self_profile.py  tz_detect.py  urls.py
mcp_server/: __init__.py  __main__.py  bootstrap.py  server.py  service.py
openoutreach/: discovery.py  settings.py  trust_gate.py
requirements/: analytics.txt  base.txt  crm.txt  local.txt
tests/: conftest.py  factories.py  test_conf.py  test_descend.py  test_discovery.py  test_discovery_wiring.py  test_emails.py  test_frontier.py  test_gdpr.py  test_geo.py  test_heal.py  test_litellm_provider.py  test_llm.py  test_mcp_service.py  test_mint.py  test_mutate.py  test_onboarding.py  test_pools.py  (+12 more)
(+320 files in other folders)
