[project]
name = "openoutreach"
version = "0.1.0"
description = "Self-hosted LinkedIn automation for B2B lead generation"
requires-python = ">=3.12"
dependencies = [
    # Browser automation
    "playwright",
    "playwright-stealth",
    # Web framework
    "Django>=5.2,<7.0",
    "django-crm-admin @ git+https://github.com/DjangoCRM/django-crm.git",
    "tendo",
    # LLM / AI
    "langchain",
    "langchain-openai",
    "jinja2",
    "pydantic",
    # ML / Embeddings
    "scikit-learn",
    "fastembed",
    "duckdb",
    "huggingface_hub",
    # Data
    "pandas",
    "jsonpath-ng",
    # Analytics (dbt)
    "dbt-core>=1.11,<1.12",
    "dbt-duckdb>=1.10,<1.11",
    "protobuf==6.33.5",  # 6.32.x had ~5GB RSS memory regression
    # Utilities
    "python-dotenv",
    "termcolor",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "pytest-mock",
    "pytest-cov",
    "factory-boy",
]

[tool.uv]
# DjangoCRM declares mysqlclient; we use SQLite so exclude it
override-dependencies = [
    "mysqlclient; python_version < '0'",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "linkedin.django_settings"
